syntax = "proto3";

package inference.inference;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/productscience/inference/x/inference/types";

option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.marshaler_all)        = true;
option (gogoproto.sizer_all)            = true;
option (gogoproto.unmarshaler_all)      = true;

message CommitInfo {
  string validator_address = 1;
  string validator_pub_key = 2;
  int64 voting_power = 3;
}

message BlockProof {
  int64 created_at_block_height = 1; // H
  string app_hash_hex           = 2; // Header(H).AppHash (from Header(H+1))
  int64 total_power = 3;
  uint64 epoch_index = 4;
  repeated CommitInfo commits   = 5;
}

message SignatureInfo {
  string signature_base64       = 1;
  string validator_address_hex  = 2;
  google.protobuf.Timestamp timestamp = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
}

message BlockID {
  string hash = 1;
  int64 part_set_header_total = 2;
  string part_set_header_hash = 3;
}

message ValidatorsProof {
  int64 block_height             = 1;
  int64 round = 2;
  BlockID block_id = 3;
  repeated SignatureInfo signatures = 4;
}

message ProofOp {
  string type = 1;
  bytes  key  = 2;
  bytes  data = 3;
}

message ProofOps {
  int64 block_height             = 1;
  uint64 epoch = 2;
  repeated ProofOp ops = 3 [(gogoproto.nullable) = false];
}

message BlockHeaderFull {
  int64                        version  = 1;
  string                       chain_id = 2;
  int64                        height   = 3;
  google.protobuf.Timestamp timestamp = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
  BlockID last_block_id = 5;
  bytes last_commit_hash = 6;
  bytes data_hash        = 7;
  bytes validators_hash      = 8;
  bytes next_validators_hash = 9;
  bytes consensus_hash       = 10;
  bytes app_hash             = 11;
  bytes last_results_hash    = 12;
  bytes evidence_hash    = 13;
  bytes proposer_address = 14;
}
